--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 :root {
 /*colors here*/
 
---primary-color: hsl(165, 60%, 40%);
+--primary-color: hsl(335, 98%, 38%);
 --title-color: hsl(0, 0%, 100%);
 --text-color: hsl(0, 0%, 92%);
 --bg-color: hsl(216, 18%, 16%);
@@ -105,4 +105,56 @@ button {
 
 img {
   max-width: 100%;
+}
+
+
+/*reusable CSS Class here*/
+
+.container {
+  
+  max-width: 1300px;
+  padding-inline: 12px;
+  margin-inline: auto;
+}
+
+.text-cs {
+  text-transform: uppercase;
+  letter-spacing: .05em;
+}
+
+.btn,
+.hero__link {
+  color: var(--title-color);
+  font-size: var(--tiny-font-size);
+  font-weight: 700;
+  height: 56px;
+  background-color: var(--container-color);
+  display: grid;
+  place-items: center;
+}
+
+.btn {
+  border: 2px solid var(--border-color);
+  padding-inline: 40px;
+  border-radius: 56px;
+  box-shadow: var(--shadow);
+}
+
+.btn::before {
+  content: '';
+  position: absolute;
+  inset: 2 px;
+  background-color: var(--primary-color);
+  border-radius: inherit;
+  transform: scale(0.3);
+  filter: blur(10 px);
+  opacity: 0;
+  transition: all 0.7s var(--transition);
+  z-index: -1;
+}
+
+.btn:hover::before {
+  transform: scale(1);
+  filter: blur(0px);
+  opacity: 1;
 }
