--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -55,7 +55,7 @@
     position: absolute;
     top: 50%;
     left: -97%;
-    trnasform: translate
+    transform: translate;
     width: 40px;
     height: 2px;
     background-color: var(--border-color);
